--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script type="bedenKitleİndesi.js"></script>
+    <script src="bedenKitleİndeksi.js"></script>
 </body>
 </html>
